fixing issue on mobile with color highlght

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,19 @@ body,
   @apply text-white;
 }
 
+.hero__textblock {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+@media (max-width: 575.98px) {
+  .hero__textblock {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
 .free-consultation {
   margin-top: 14px;
 }
